bug: handle long sidebar block titles better
If a word in the sidebar title is > 20% of the screen width, it breaks
out of the nav column and goes into the main column.

Set min nav width to min-content. This might take up too much screen
width for langauges with long words (German).

When collapsed for small screen <= 600px break the word otherwise you
get the long word bleeding outside the block in the 2x3 or 3x2 grid.

--- a/share/roundup/templates/classic/html/style.css
+++ b/share/roundup/templates/classic/html/style.css
@@ -60,6 +60,12 @@ nav {
     flex-shrink: 1;
     /* force wrapping of long search names. */
     max-width: 20%;
+    /* Don't allow shrink below size of longest word
+       (e.g. Administration). Otherwise the word extends outside of
+       nav column. Maybe consider using: overflow-wrap: break-word;
+       instead if word is long enough if takes up too much of the
+       screed width? */
+    min-width: min-content;
 }
 
 nav > p > a {
@@ -92,6 +98,12 @@ main {
         grid-template-columns: repeat(auto-fit,minmax(10em,1fr));
         max-width: initial;
         width: 100%;
+    }
+    nav > * {
+	/* I want:
+               grid-template-columns: repeat(auto-fit,minmax(min-content,1fr));
+           to work, but it's an invalid declaration, so we break words. */
+	overflow-wrap: break-word;
     }
     nav > form > p {
         /* force nav children that are forms to stretch to the full
